# stratindex

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.in  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
docs/: api.md  index.md
scripts/: convert_dataset.py  r_golden.R
search/: search_index.json
spec/: backlog.md  stratindex.md
src/stratindex/: __init__.py  _kernel.py  _utils.py  core.py  datasets.py  results.py
tests/: conftest.py  test_bootstrap_and_html.py  test_categorical.py  test_data_mode.py  test_dataset.py  test_kernel.py  test_r_golden.py  test_srank.py  test_strat.py  test_wtd_rank.py
tests/data/: r_golden.json
