[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratindex"
version = "0.2.1"
description = "A nonparametric index of stratification (Zhou 2012): Python port of the R package 'strat'"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "DK", email = "dk.promsoft@gmail.com" },
]
keywords = ["stratification", "inequality", "social-mobility", "statistics", "sociology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Sociology",
]
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/promsoft/stratindex"
Repository = "https://github.com/promsoft/stratindex"
Issues = "https://github.com/promsoft/stratindex/issues"

[tool.hatch.build.targets.sdist]
include = ["src/stratindex", "tests", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/stratindex"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY"]
